tests/cases/parser/literals/dangling_parenthesis.stderr
error: unexpectedly encountered a `)`
 --> $DIR/dangling_parenthesis.hash:3:17
2 |   
3 |   k := (a) + ((b)));
  |                   ^ 
  = help: consider adding a `;`
